; ModuleID = '/home/carl/AnghaBench/reactos/ntoskrnl/kdbg/i386/extr_i386-dis.c_INVLPG_Fixup.c'
source_filename = "/home/carl/AnghaBench/reactos/ntoskrnl/kdbg/i386/extr_i386-dis.c_INVLPG_Fixup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@codep = common dso_local global i32* null, align 8
@obuf = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [7 x i8] c"swapgs\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @INVLPG_Fixup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @INVLPG_Fixup(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** @codep, align 8
  %7 = load i32, i32* %6, align 4
  %8 = icmp eq i32 %7, 248
  br i1 %8, label %9, label %20

9:                                                ; preds = %2
  %10 = load i8*, i8** @obuf, align 8
  %11 = load i8*, i8** @obuf, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8, i8* %10, i64 %13
  store i8* %14, i8** %5, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = getelementptr inbounds i8, i8* %15, i64 -6
  %17 = call i32 @strcpy(i8* %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %18 = load i32*, i32** @codep, align 8
  %19 = getelementptr inbounds i32, i32* %18, i32 1
  store i32* %19, i32** @codep, align 8
  br label %24

20:                                               ; preds = %2
  %21 = load i32, i32* %3, align 4
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @OP_E(i32 %21, i32 %22)
  br label %24

24:                                               ; preds = %20, %9
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @OP_E(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
